improve audio, add new feasture: card match score

--- a/src/features/color-garden/color-garden.css
+++ b/src/features/color-garden/color-garden.css
@@ -422,11 +422,8 @@
 
 /* Vertical Range Input */
 .cg-vertical-range {
-    writing-mode: bt-lr;
-    /* IE/Edge */
-    -webkit-appearance: slider-vertical;
-    appearance: slider-vertical;
-    /* Webkit */
+    writing-mode: vertical-lr;
+    direction: rtl;
     width: 12px;
     /* Increased from 8px */
     height: 100%;
